# xlook

./: .gitignore  Doxyfile  Makefile.am  Makefile.in  README  README.dist.txt  README.macos.txt  README.md  array.c  array.h  asc2look.c  can.c  can.h  cmds.c  cmds.h  cmds1.c  config.h  config.h.in  configure  configure.ac  configure.in  drawwin.c  event.c  filtersm.c  filtersm.h  fq.c  func.c  global.h  look_funcs.c  lookio.c  main.c  main.h  makefile  median.c  mem.c  menus.c  menus.h  messages.c  mouse.c  mouse.h  (+13 more)
example/: p446_r  p446s7tr005l  p655_r  p655intact100l
gtk/: .gitignore  BuildNotes.txt  Makefile.am  README.txt  TODO.txt  XLook.glade  asc2look.c  can.c  cmd_window.c  cmd_window.h  cmds.c  cmds1.c  cmds1.h  config.h.in  configure  configure.ac  configure.scan  drawwin.c  event.c  filtersm.c  filtersm.h  fq.c  func.c  global.h  main.c  main.h  messages.c  messages.h  mouse.c  notices.c  offscreen_buffer.c  offscreen_buffer.h  plot_window.c  plot_window.glade  plot_window.h  qi_log_p655intact100  qi_look.c  rs_fric_window.c  rs_fric_window.glade  rs_fric_window.h  (+10 more)
gtk-version/: BuildNotes.txt  Makefile.in  README.txt  aclocal.m4  cmds.c  cmds1.c  configure  event.c  event.h  look.h  look_funcs.h  mem.c  notices.c  perrfl.c  plot_window.glade  polyfit.h  special.h  xlook
gtk-version/tmp/: BuildNotes.txt  cmd_window.h  configure.ac  look_funcs.c  lookio.h  median.c  notices.h  nrutil.h  plot_window.h  rs_fric_window.h  xlook.glade
gtk-version/xmsp/: xmsp.makefile
gtk/example/: p446_r
mac-installer/: README.md
mac-installer/xlook/: xlook.packproj
src/: create_static_ui.sh  fq.h  func.c  look_funcs.c  lookio.c  messages.c  nrutil.c  plot_window.c  qi_look.c  qi_look.h  strcmd.c  strcmd.h  ui_static.h  xlook  xlook.glade
src/tmp/: cmds.c  cmds1.c  global.h  main.c  median.h  nr.h  plot_window.glade  polyfit.c  rs_fric_window.glade  simplexl.h  ui.h
src/xmsp/: xmsp.c
xview/: README.md
xview-version/: cmds1.c  cmds1.h  config.h.in  configure  drawwin.h  filtersm.h  fq.c  func.h  look_funcs.c  lookio.c  lv2look.c  main.c  mem.h  menus.c  messages.c  notices.c  notices.h  perrfl.h  polyfit.c  qi_look.c  rs_fric_tool.c  rs_fric_tool.h  simplexl.c  special.c
xview-version/mac-installer/xlook/: README.txt
xview-version/xview/binary/cygwin/: xview-3.2p1.4-18c-cygwin.tar.bz2
xview-version/xview/binary/darwin/xview-universal.pkg/Contents/: Archive.bom  Info.plist
xview-version/xview/binary/darwin/xview-universal.pkg/Contents/Resources/: XView-universal.sizes  package_version
xview-version/xview/src/: README.md
xview-version/xview/src/xview-3.2p1.4-19c/: Build-XView.bash  README.WINDOWS
xview-version/xview/src/xview-3.2p1.4-19c/bitmaps/: Imakefile
xview-version/xview/src/xview-3.2p1.4-19c/clients/clock/: clock.c
xview-version/xview/src/xview-3.2p1.4-19c/clients/olvwm-4.1/: defaults.c  screen.c  services.c  usleep.c  virtual.c  winframe.c
xview-version/xview/src/xview-3.2p1.4-19c/clients/olwm/: defaults.c  events.c  gettext.c  mem.c  usermenu.c  usleep.c  winframe.c
xview-version/xview/src/xview-3.2p1.4-19c/clients/props/: l10n_props.c
xview-version/xview/src/xview-3.2p1.4-19c/config/: XView.tmpl
xview-version/xview/src/xview-3.2p1.4-19c/contrib/examples/extensions/: Imakefile  Makefile.customer
xview-version/xview/src/xview-3.2p1.4-19c/debian/: control  olvwm.dirs  olvwm.menu  olwm-x-window-manager  olwm.conffiles  olwm.dirs  olwm.menu-method  olwm.postinst  xview-clients.dirs  xviewg-dev.dirs  xviewg.dirs
xview-version/xview/src/xview-3.2p1.4-19c/lib/libolgx/: Imakefile
xview-version/xview/src/xview-3.2p1.4-19c/lib/libxview/base/: base.h
xview-version/xview/src/xview-3.2p1.4-19c/lib/libxview/frame/: fm_rescale.c
xview-version/xview/src/xview-3.2p1.4-19c/lib/libxview/misc/: getlogindr.c  gettext.c
xview-version/xview/src/xview-3.2p1.4-19c/old/: Build-LinuxXView.bash
xview-version/xview/src/xview-3.2p1.4-19c/util/xgettext/: xgettext.h
xview/binary/cygwin/: README.md
xview/binary/darwin/: README.md
xview/src/xview-3.2p1.4-19c/clients/olvwm-4.1/: Imakefile  olvwmrc.y  olwm.c  patchlevel.h  usermenu.c
xview/src/xview-3.2p1.4-19c/clients/olwm/: olwm.c  resources.c  services.c  slave.c
xview/src/xview-3.2p1.4-19c/clients/olwmslave/: Imakefile
xview/src/xview-3.2p1.4-19c/clients/props/: l10n_read.c  props.man
xview/src/xview-3.2p1.4-19c/clients/textedit/: textedit.c
xview/src/xview-3.2p1.4-19c/config/: XView.cf  XView.rules
xview/src/xview-3.2p1.4-19c/debian/: changelog  olvwm-x-window-manager  olvwm.conffiles  olvwm.menu-method  olwm.menu  rules  xview-clients.menu  xviewg.conffiles  xviewg.postrm
xview/src/xview-3.2p1.4-19c/lib/libxview/: Imakefile
xview/src/xview-3.2p1.4-19c/lib/libxview/base/: xv_error.c
xview/src/xview-3.2p1.4-19c/lib/libxview/dnd/: site.c
xview/src/xview-3.2p1.4-19c/lib/libxview/file_chooser/: file_list.c
xview/src/xview-3.2p1.4-19c/lib/libxview/filter/: filter.c
xview/src/xview-3.2p1.4-19c/lib/libxview/font/: font.c
xview/src/xview-3.2p1.4-19c/lib/libxview/frame/: fm_props.h
xview/src/xview-3.2p1.4-19c/lib/libxview/help/: help_file.c
xview/src/xview-3.2p1.4-19c/lib/libxview/misc/: expandname.c
xview/src/xview-3.2p1.4-19c/lib/libxview/notify/: linux_select.h  ndet_auto.c  ndet_fcntl.c  ndet_read.c  ntfy_fd_op.c  sys_read.c  sys_select.c
xview/src/xview-3.2p1.4-19c/lib/libxview/panel/: p_utl.c  panel.c
xview/src/xview-3.2p1.4-19c/lib/libxview/selection/: sel_own.c  selection.c
xview/src/xview-3.2p1.4-19c/lib/libxview/server/: server.c
xview/src/xview-3.2p1.4-19c/lib/libxview/textsw/: ei_text.c  es_mem.c  ev_edit.c  txt_again.c  txt_e_menu.c  txt_edit.c  txt_file.c  txt_once.c
xview/src/xview-3.2p1.4-19c/lib/libxview/ttysw/: csr_change.c  tty.c  tty_gtty.c  tty_main.c  tty_stty.c  ttyansi.c  ttyselect.c
xview/src/xview-3.2p1.4-19c/lib/libxview/win/: win_input.c
xview/src/xview-3.2p1.4-19c/lib/libxview/window/: window_set.c  windowcmpt.c
xview/src/xview-3.2p1.4-19c/lib/libxview/wmgr/: wmgr_menu.c
(+34 files in other folders)
