AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = xlook

xlook_SOURCES = \
        array.c \
        array.h \
        can.c \
        can.h \
        cmds1.c \
        cmds1.h \
        cmds.c \
        cmds.h \
        drawwin.c \
        drawwin.h \
        event.c \
        event.h \
        filtersm.c \
        filtersm.h \
        fq.c \
        fq.h \
        func.c \
        func.h \
        global.h \
        look_funcs.c \
        look_funcs.h \
        lookio.c \
        lookio.h \
        main.c \
        main.h \
        median.c \
        median.h \
        mem.c \
        mem.h \
        menus.c \
        menus.h \
        messages.c \
        messages.h \
        mouse.c \
        mouse.h \
        notices.c \
        notices.h \
        nr.h \
        nrutil.c \
        nrutil.h \
        perrfl.c \
        perrfl.h \
        polyfit.c \
        polyfit.h \
        qi_look.c \
        qi_look.h \
        rs_fric_tool.c \
        rs_fric_tool.h \
        simplexl.c \
        simplexl.h \
        sort.c \
        sort.h \
        special.c \
        special.h \
        strcmd.c \
        strcmd.h \
        tpulsel.c \
        tpulsel.h

EXTRA_DIST = Doxyfile canvas.ico xlook.ico 

.PHONY: doc
doc:
	$(DOXYGEN)
